# FSGPControlApp

./: CMakeLists.txt  main.cpp  qml.qrc
eth/: ethcore.cpp  ethcore.h  frame_defines.h  fsgp.cpp  fsgp.h  fsgp_command_frame.h  fsgp_fdk_frame.h  fsgp_signal_params_frame.h
gui/: controlgui.cpp  controlgui.h
qml/: ControlScreen.qml  EthSettings.qml  Main.qml
